--- a/src/pages/AboutUs/AboutUs.css
+++ b/src/pages/AboutUs/AboutUs.css
@@ -1,5 +1,5 @@
 .bodyAbout {
-  background-image: url("../../Assets/big4.jpg") !important;
+  background-image: url("../../Assets/pro6.jpg") !important;
   background-size: cover !important; /* لتغطية كامل الشاشة */
   background-position: center !important;
   background-repeat: no-repeat !important; /* عدم تكرار الصورة */
