--- a/src/pages/PrivacyPolicy/PrivacyPolicy.css
+++ b/src/pages/PrivacyPolicy/PrivacyPolicy.css
@@ -1,3 +1,8 @@
+.privall{
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
 .privacyPolicy {
     background-color: white;
     padding: 5% 4%;
