--- a/src/pages/Product/Product.css
+++ b/src/pages/Product/Product.css
@@ -1,6 +1,8 @@
 .app-container {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
+  display: flex;
+  flex-direction: column; /* ترتيب العناصر عموديًا */
+  min-height: 100vh;
   }
-  
+  .ss{
+    flex: 1;
+  }
