--- a/src/pages/TermsOfService/TermsOfService.css
+++ b/src/pages/TermsOfService/TermsOfService.css
@@ -1,3 +1,8 @@
+.termsall{
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
 .termsOfService {
     /* flex: 1; */
     background-color: white;
